--- a/sinatra-project/app/views/index.erb
+++ b/sinatra-project/app/views/index.erb
@@ -1,12 +1,11 @@
 <div class="container">
-  <header><img src="images/corneal-small.png" class="img-responsive main-image"></header>
+  <!-- <header><img src="images/corneal-small.png" class="img-responsive main-image"></header> -->
   <div class="col-md-8 col-md-offset-2">
-    <h2>Sinatra Template Default Page</h2>
+    <h2>Welcome to Gift Journal!</h2>
 
     <div class="content">
-      <p>Welcome to the Sinatra Template! If you're seeing this page, then everything is working
-      as expected. To get started, delete this file (<code>app/views/welcome.erb)</code> and begin adding
-      your own actions to <code>application_controller.rb</code>. For more information, see the <a href="https://github.com/thebrianemory/corneal">README</a>.</p>
+      <p> Gift Journal allows you to keep track of your desired gifts or wishes, much like a journal, and share your list with others!</p>
+        <p>Please sign up or log in to get started:</p>>
     </div>
 
     <div class="sidebar">
