edits to index page

--- a/sinatra-project/app/views/index.erb
+++ b/sinatra-project/app/views/index.erb
@@ -8,7 +8,7 @@
         <p>Please sign up or log in to get started:</p>>
     </div>
 
-    <div class="sidebar">
+    <!-- <div class="sidebar">
       <h3>Environment</h3>
       <ul>
         <li><b>Ruby:</b> <%= RUBY_VERSION %></li>
@@ -16,7 +16,7 @@
         <li><b>Server:</b> <%= @env["SERVER_SOFTWARE"] %></li>
         <li><b>Port:</b> <%= @env["SERVER_PORT"] %></li>
       </ul>
-    </div>
+    </div> -->
 
   </div>
 </div>
